crates/backends/tests/snapshots/sqlite__ordinary_table.snap
---
source: crates/backends/tests/sqlite.rs
expression: snapshot
---
id: app
display_name: ~
catalog:
  namespaces:
    - name: main
      comment: ~
  tables:
    - namespace: main
      name: users
      comment: ~
      columns:
        - name: id
          data_type: INTEGER
          nullable: false
          default: ~
          comment: ~
          kind: normal
          collation: BINARY
          generated_expression: ~
        - name: email
          data_type: TEXT
          nullable: false
          default: ~
          comment: ~
          kind: normal
          collation: BINARY
          generated_expression: ~
        - name: display_name
          data_type: TEXT
          nullable: true
          default: "'anonymous'"
          comment: ~
          kind: normal
          collation: BINARY
          generated_expression: ~
      constraints:
        - name: ~
          kind: primary_key
          columns:
            - id
          expression: ~
          references: ~
          conflict_resolution: ~
          auto_increment: false
          declared_on_column: true
        - name: ~
          kind: not_null
          columns:
            - id
          expression: ~
          references: ~
          conflict_resolution: ~
          auto_increment: false
          declared_on_column: true
        - name: ~
          kind: not_null
          columns:
            - email
          expression: ~
          references: ~
          conflict_resolution: ~
          auto_increment: false
          declared_on_column: true
      indexes: []
      without_rowid: false
      strict: false
      definition: "CREATE TABLE users (\n    id INTEGER PRIMARY KEY NOT NULL,\n    email TEXT NOT NULL,\n    display_name TEXT DEFAULT 'anonymous'\n)"
      kind:
        kind: ordinary
  views: []
  triggers: []
